--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a href="index.html" class="dropdown-item">Homepage 1</a></li>
-                            <li><a href="Homepage-2.html" class="dropdown-item">Homepage 2</a></li>
+                            <li><a href="https://youtu.be/dQw4w9WgXcQ" class="dropdown-item">Homepage 2</a></li>
                         </ul>
                     </li>
 	                <li class="nav-item">
@@ -90,8 +90,8 @@
                             News
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="Blog-List.html" class="dropdown-item">Blog List</a></li>
-                            <li><a href="Blog-Detail.html" class="dropdown-item">Blog Detail</a></li>
+                            <li><a href="https://youtu.be/dQw4w9WgXcQ" class="dropdown-item">Blog List</a></li>
+                            <li><a href="https://youtu.be/dQw4w9WgXcQ" class="dropdown-item">Blog Detail</a></li>
                         </ul>
                     </li>
 	                <li class="nav-item">
