--- a/Contact.html
+++ b/Contact.html
@@ -117,7 +117,7 @@
     			<div class="col-12">
     				<h3 class="clscheme">Blog</h3>
     				<ul>
-						<li><a href="#">HOME</a></li>
+						<li><a href="\index.html">HOME</a></li>
 						<li class="current"><a href="#">BLOG</a></li>
 					</ul>
     			</div>
