Fix app store & google play download button
It works now

--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
 									<h1 class="ez-animate" data-animation="fadeInLeft">Share your Internet bandwith and get paid for it</h1>
 									<p class="ez-animate" data-animation="fadeInLeft">The easiest way to make passive income!</p>
 									<ul>
-										<li><a href="#"><img class="img-fluid ez-animate" src="assets/images/img-appstore.png" alt="BS9000" data-animation="fadeInUp"></a></li>
-										<li><a href="#"><img class="img-fluid ez-animate" src="assets/images/img-googleplay.png" alt="BS9000" data-animation="fadeInUp"></a></li>
+										<li><a href="https://youtu.be/dQw4w9WgXcQ"><img class="img-fluid ez-animate" src="assets/images/img-appstore.png" alt="BS9000" data-animation="fadeInUp"></a></li>
+										<li><a href="https://youtu.be/dQw4w9WgXcQ"><img class="img-fluid ez-animate" src="assets/images/img-googleplay.png" alt="BS9000" data-animation="fadeInUp"></a></li>
 									</ul>
 								</div>
 								<div class="right ez-animate col-12 col-sm-12 col-md-5" data-animation="fadeInRight">
