--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <!-- First Mobile Meta -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Pgae Description -->
-    <meta name="description" content="BandwithSharing9000">
+    <meta name="description" content="BandwidthSharing9000">
     <!-- Page Kewords -->
-    <meta name="keywords" content="BandwithSharing9000">
+    <meta name="keywords" content="BandwidthSharing9000">
     <!-- Site Author -->
-    <meta name="author" content="BandwithSharing9000">
+    <meta name="author" content="BandwidthSharing9000">
     <!-- Title -->
-    <title>Home | BandwithSharing9000</title>
+    <title>Home | BandwidthSharing9000</title>
     <!-- Favicon -->
     <link rel="shortcut icon" href="assets/images/favicon.png">
     <!-- Bootstrap 4 -->
@@ -567,7 +567,7 @@
 			<div class="footer-widget">
 				<div class="row">
 					<div class="left col-md-6">
-						<a href="index.html"><img src="assets/images/logo.png" alt="BandwithSharing9000"></a>
+						<a href="index.html"><img src="assets/images/logo.png" alt="BandwidthSharing9000"></a>
 					</div>
 					<div class="right col-md-6">
 						<div class="social-links">
