--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 						<div class="container">
 							<div class="row">
 								<div class="left col-12 col-sm-12 col-md-7">
-									<h1 class="ez-animate" data-animation="fadeInLeft">Share your Internet bandwith and get paid for it</h1>
+									<h1 class="ez-animate" data-animation="fadeInLeft">Share your Internet bandwidth and get paid for it</h1>
 									<p class="ez-animate" data-animation="fadeInLeft">The easiest way to make passive income!</p>
 									<ul>
 										<li><a href="https://youtu.be/dQw4w9WgXcQ"><img class="img-fluid ez-animate" src="assets/images/img-appstore.png" alt="BS9000" data-animation="fadeInUp"></a></li>
@@ -201,7 +201,7 @@
 								<div class="item">
 									<img src="assets/images/img-icon2.png" alt="Appcraft">
 									<h3>Fastest earning app</h3>
-									<p>We have a lot of clients and partners, that's why we always have demand ready for you to share your internet to!</p>
+									<p>We have a lot of clients and partners, that's why we always have demand ready for you to share your Internet to!</p>
 								</div>
 							</div>
 							<!-- /.Item -->
