--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
 					<!-- Item -->
 					<div class="item">
 						<img src="assets/images/img-testimonial3.png" alt="Appcraft">
-						<h3>Elon Musk</h3>
+						<h3>Pbaodoge/h3>
 						<h4>Client</h4>
 						<ul>
 							<li><i class="fa fa-star"></i></li>
@@ -481,7 +481,7 @@
 							<li><i class="fa fa-star"></i></li>
 							<li><i class="fa fa-star"></i></li>
 						</ul>
-						<p>This app is amazing! I can earn money without doing anything! One of the best feature of this app is the ability to buy a Tesla directly from the app and I really love it!</p>
+						<p>This app is amazing, I can earn a lot of money on sharing bandwith and get literally no payout. This app sucks dont download it stfu, scwam. Im finding you ItzDatMC</p>
 					</div>
 					<!-- /.Item -->
 					<!-- Item -->
