--- a/index.html
+++ b/index.html
@@ -471,8 +471,8 @@
 					<!-- /.Item -->
 					<!-- Item -->
 					<div class="item">
-						<img src="assets/images/img-testimonial3.png" alt="Appcraft">
-						<h3>Pbaodoge/h3>
+						<img src="assets/images/img-testimonial1.png" alt="Appcraft">
+						<h3>Pbaodoge</h3>
 						<h4>Client</h4>
 						<ul>
 							<li><i class="fa fa-star"></i></li>
