--- a/dashboard.html
+++ b/dashboard.html
@@ -3,6 +3,6 @@
     <title>Dashboard</title>
   </head>
   <body>
-<iframe width="800" height="600" src="https://www.youtube.com/embed/dQw4w9WgXcQ&autoplay=1?controls=0 title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe id="video-frame" src="https://www.youtube-nocookie.com/embed/dQw4w9WgXcQ?&amp;enablejsapi=1&amp;autoplay=1&amp;mute=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="" height="557"></iframe>
   </body>
 </html>
