--- a/dashboard.html
+++ b/dashboard.html
@@ -5,13 +5,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta property="og:image" content="https://www.secretrickroll.com/assets/opt2.jpg"/>
-	<meta property="og:title" content="Unbelievable Breaking News"/>
-	<meta name="title" content="Unbelievable Breaking News"/>
-	<meta property="og:description" content="You will never believe this unbelievable breaking news."/>
-	<meta name="description" content="You will never believe this unbelievable breaking news."/>
+	<meta property="og:title" content="BandwidthSharing9000's Dashboard"/>
+	<meta name="title" content="BandwidthSharing9000's User Dashboard"/>
+	<meta property="og:description" content="User dashboard for BandwidthSharing9000."/>
+	<meta name="description" content="User dashboard for BandwidthSharing9000."/>
 	
-    <title>Unbelievable Breaking News</title>
+    <title>BandwidthSharing9000's Dashboard</title>
     
     <link rel="stylesheet" href="https://unpkg.com/purecss@0.6.2/build/pure-min.css" integrity="sha384-" crossorigin="anonymous">
     
