updated grammar errors

--- a/Contact.html
+++ b/Contact.html
@@ -15,7 +15,7 @@
     <!-- Site Author -->
     <meta name="author" content="Appcraft">
     <!-- Title -->
-    <title>Contact | Appcraft</title>
+    <title>Contact | BandwidthSharing9000</title>
     <!-- Favicon -->
     <link rel="shortcut icon" href="assets/images/favicon.png">
     <!-- Bootstrap 4 -->
@@ -152,12 +152,16 @@
 				<div class="right ez-animate col-12 col-md-5" data-animation="fadeInRight">
 					<h3>Do you have any question?</h3>
 					<ul>
-						<li>Call us for imiditate support</li>
+						<li>Call us for immediate support</li>
 						<li><a href="tel:123-456-78-90">+ 123 456 78 90</a></li>
 					</ul>
 					<ul>
 						<li>Send us email for any kind of inquiry</li>
 						<li><a href="mailto:support@merwie.xyz>support@merwie.xyz</a></li>
+					</ul>
+					<ul>
+						<li>Contact us via Discord</li>
+						<li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Woodie#3742</a></li>
 					</ul>
 				</div>
 			</div>
