--- a/Contact.html
+++ b/Contact.html
@@ -156,8 +156,8 @@
 						<li><a href="tel:123-456-78-90">+ 123 456 78 90</a></li>
 					</ul>
 					<ul>
-						<li>Contact us via Discord</li>
-						<li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Woodie#3742</a></li>
+						<li>Contact us via email</li>
+						<li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">bandwidthsharing9000@woodiemail.ga</a></li>
 					</ul>
 				</div>
 			</div>
